--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -8,14 +8,15 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn9"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn20">
+                        <wm-form errormessage="" captionposition="top" title="Set New Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
                         show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
-                                <wm-gridrow name="gridrow6">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn10">
-                                        <wm-label padding="unset 0.5em unset unset" caption="PASSWORD REQUIREMENTS:" fontweight="bold" name="label2"></wm-label>
-                                        <wm-label padding="unset 0.5em" caption="All passwords must contain a minimum of 8 characters including at least 1 capital letter, 1 number, and 1 special character (e.g. @$!%*?&amp;)" name="label3_1"></wm-label>
+                                <wm-gridrow name="gridrow7" padding="unset unset 1em unset">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn11_1">
+                                        <wm-label padding="unset 0.5em" name="label4" caption="PASSWORD REQUIREMENTS:" fontweight="bold"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label5" caption="All passwords must contain a minimum of 8 characters including at least 1 capital letter, 1 number, and 1 special character (e.g. @$!%*?&amp;)"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow9">
@@ -33,17 +34,19 @@
                             </wm-layoutgrid>
                             <wm-form-field name="token" displayname="Token" key="token" type="string" show="false" widget="text" defaultvalue="bind:token" autocomplete="false" inputtype="text" placeholder="Enter value"></wm-form-field>
                             <wm-buttongroup horizontalalign="right" class="form-action col-md-12" name="buttongroup1">
-                                <wm-button caption="Reset Password" type="submit" class="btn-primary" name="button4" iconclass="wi wi-update"></wm-button>
+                                <wm-button caption="Save" type="submit" class="btn-primary" name="button4" iconclass="wi wi-save"></wm-button>
                             </wm-buttongroup>
                         </wm-form>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn11"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn3"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn6" horizontalalign="center">
-                        <wm-label padding="unset 0.5em" name="label3" caption="Your password reset link has expired. Please contact Support" show="bind:Variables.ValidateToken.dataSet.value === 0" fontweight="bold" fontsize="20"></wm-label>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn3"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn6" horizontalalign="center">
+                        <wm-label padding="1em 0.5em" name="label3" caption="Your password reset link has expired." show="bind:Variables.ValidateToken.dataSet.value === 0" fontweight="bold" fontsize="20"></wm-label>
+                        <wm-anchor margin="unset 0.5em" name="anchor1" caption="Please generate a new link or contact Support at 614-737-3743 for further assistance." show="bind:Variables.ValidateToken.dataSet.value === 0" hyperlink="https://www.wavemakeronline.com/run-h70fmczdtv/CivicXpress/#/ForgotPassword"></wm-anchor>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn4"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn4"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
