Boolean magickz Files modified - [FormService.java,NewForm.html]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -203,7 +203,7 @@
                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-delete" title="Delete" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                 </wm-grid>
                             </wm-wizardstep>
-                            <wm-wizardstep name="wizardstep9" title="Owner" ng-if="loaded &amp;&amp; ownerInfo">
+                            <wm-wizardstep name="wizardstep9" title="Owner" ng-elf="loaded &amp;&amp; ownerInfo">
                                 <wm-layoutgrid name="layoutgrid14_1">
                                     <wm-gridrow name="gridrow42">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn82_1">
