toned down the "Creator" label. Did not edit variables.json, but VCS refuses to revert the faux changes away- maybe it's something I picked up from a pull.. Files modified - [Forms.variables.json,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -37,16 +37,18 @@
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn157"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow83_1">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn156_2" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="label66" caption="bind:'Creator: ' + Variables.CurrentForm.dataSet.data[$i].users.firstName + ' ' + Variables.CurrentForm.dataSet.data[$i].users.lastName" class="h3"></wm-label>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn156_3"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn156_2" horizontalalign="center">
+                                        <wm-label padding="unset 0.5em" name="label66" caption="bind:'Created By: ' + Variables.CurrentForm.dataSet.data[$i].users.firstName + ' ' + Variables.CurrentForm.dataSet.data[$i].users.lastName" fontsize="15"></wm-label>
                                     </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn157_1"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow14">
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn24_1"></wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn28" horizontalalign="center">
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn24_1"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="8" name="gridcolumn28" horizontalalign="center">
                                         <wm-label padding="unset 0.5em" name="labelFormStatus" caption="bind:'Status: '+defaultObjectForSelectStatus.status" hint="bind:defaultObjectForSelectStatus.description" class="h3"></wm-label>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn25"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn25"></wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow15">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn29"></wm-gridcolumn>
