--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -325,30 +325,6 @@
                                 </wm-tabpane>
                                 <wm-tabpane name="tabpaneVendor" title="VENDOR" show="bind:Variables.lvFormType.dataSet.data[$i].vendorSelection">
                                     <wm-layoutgrid name="layoutgrid18">
-                                        <wm-gridrow name="gridrow82">
-                                            <wm-gridcolumn columnwidth="12" name="gridcolumn152_1">
-                                                <wm-panel iconclass="wi wi-account-circle" autoclose="outsideClick" name="panel3" title="Primary Vendor" class="panel-primary">
-                                                    <wm-layoutgrid name="layoutgrid22">
-                                                        <wm-gridrow name="gridrow83" padding="1em unset">
-                                                            <wm-gridcolumn columnwidth="10" name="gridcolumn153_1">
-                                                                <wm-composite name="composite5">
-                                                                    <wm-label class="col-md-3 control-label" name="label65" caption="Select Primary Vendor"></wm-label>
-                                                                    <wm-container class="col-md-9" name="container5">
-                                                                        <wm-select name="selectPrimaryVendor" dataset="bind:Variables.VendorsLinkedWithForm.dataSet" datafield="All Fields" displayfield="companyName" datavalue="bind:Variables.CurrentForm.dataSet.data[$i].vendor"></wm-select>
-                                                                    </wm-container>
-                                                                </wm-composite>
-                                                            </wm-gridcolumn>
-                                                            <wm-gridcolumn columnwidth="2" name="gridcolumn154_1" horizontalalign="left">
-                                                                <wm-button class="btn-default btn-primary" caption="Update" type="button" margin="unset 0.5em unset 1em" name="buttonUpdatePrimaryVendor" on-click="Variables.UpdatePrimaryVendorInMasterForms.invoke()"></wm-button>
-                                                            </wm-gridcolumn>
-                                                        </wm-gridrow>
-                                                        <wm-gridrow name="gridrow84">
-                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn155_1" horizontalalign="center"></wm-gridcolumn>
-                                                        </wm-gridrow>
-                                                    </wm-layoutgrid>
-                                                </wm-panel>
-                                            </wm-gridcolumn>
-                                        </wm-gridrow>
                                         <wm-gridrow name="gridrow62">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn129">
                                                 <wm-label padding="unset 0.5em" name="label35" caption="If this form is associated to a vendor, please add the vendor to the form by clicking the “Add Vendor” button below."></wm-label>
@@ -364,6 +340,9 @@
                                                         <wm-grid-column binding="vendor.companyWebsite" caption="Website" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
                                                         <wm-grid-column binding="sharedOn" caption="Date Added" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" show="true" filterwidget="text"
                                                         readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="primaryVendor" caption="Primary Vendor" type="boolean" widget-type="checkbox" primary-key="false" generator="assigned" show="true" readonly="false">
+                                                            <wm-checkbox scopedatavalue="row['primaryVendor']" disabled="Enable" class="" data-ng-class="" on-change="primaryVendorChange(row['primaryVendor'])"></wm-checkbox>
+                                                        </wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add Vendor" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Vendor" action="Widgets.dialogAddVendor.open()" shortcutkey=""
                                                         disabled="bind:canAddVendor()"></wm-grid-action>
@@ -760,6 +739,15 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn89"></wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow83_2">
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn158"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="10" name="gridcolumn159">
+                        <wm-composite name="composite5_1">
+                            <wm-checkbox caption="Primary Vendor" class="col-md-push-3 col-md-9" name="checkboxPrimaryVendor" checkedvalue="true" uncheckedvalue="false"></wm-checkbox>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="1" name="gridcolumn160"></wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow39" padding="1em unset unset unset">
                     <wm-gridcolumn columnwidth="1" name="gridcolumn90"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn91">
@@ -778,8 +766,7 @@
                 <wm-gridrow name="gridrow41">
                     <wm-gridcolumn columnwidth="1" name="gridcolumn96"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn97">
-                        <wm-button class="btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="Variables.UpdateVendorForMasterForms.invoke();Variables.AddingVendorsToForm.invoke()"
-                        name="buttonTagVendor"></wm-button>
+                        <wm-button class="btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="buttonTagVendorClick($event, $scope)" name="buttonTagVendor"></wm-button>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn98"></wm-gridcolumn>
                 </wm-gridrow>
