--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -18,7 +18,8 @@
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="select1" dataset="bind:Variables.EmployeesOrAdminsMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesOrAdminsMunicipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
+                                <wm-select name="selectMunicipality" dataset="bind:Variables.EmployeesOrAdminsMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesOrAdminsMunicipalities.firstRecord"
+                                orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -35,55 +36,49 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow7" padding=".5em unset">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn9"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="8" name="gridcolumn10">
-                                            <wm-composite name="composite2">
-                                                <wm-label class="col-md-3 control-label" name="label5" caption="User"></wm-label>
-                                                <wm-container class="col-md-9" name="container2">
-                                                    <wm-search name="searchUser" placeholder="Start typing Email...."></wm-search>
-                                                </wm-container>
-                                            </wm-composite>
+                                        <wm-gridcolumn columnwidth="2" name="gridcolumn29">
+                                            <wm-label class="col-md-3 control-label" name="label5" caption="User" padding="unset unset unset .5em"></wm-label>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn21"></wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="7" name="gridcolumn10">
+                                            <wm-search name="searchUser" placeholder="Start typing Email...."></wm-search>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="1" name="gridcolumn21"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow8" padding=".5em unset">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn11"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn12">
                                             <wm-label padding="unset 0.5em" name="label6" caption="And Submitted between" class="control-label"></wm-label>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn26_1">
+                                        <wm-gridcolumn columnwidth="3" name="gridcolumn26_1">
                                             <wm-datetime name="datetimeStart"></wm-datetime>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="1" name="gridcolumn27_1">
+                                        <wm-gridcolumn columnwidth="1" name="gridcolumn27_1" horizontalalign="center">
                                             <wm-label padding="unset 0.5em" name="label9" caption="and" class="control-label"></wm-label>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="4" name="gridcolumn28">
+                                        <wm-gridcolumn columnwidth="3" name="gridcolumn28">
                                             <wm-datetime name="datetimeEnd"></wm-datetime>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="1" name="gridcolumn22"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow9" padding=".5em unset">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn13"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="8" name="gridcolumn14">
-                                            <wm-composite name="composite6">
-                                                <wm-label class="col-md-3 control-label" name="label10" caption="And form Category"></wm-label>
-                                                <wm-container class="col-md-9" name="container6">
-                                                    <wm-select name="select2"></wm-select>
-                                                </wm-container>
-                                            </wm-composite>
+                                        <wm-gridcolumn columnwidth="2" name="gridcolumn30">
+                                            <wm-label class="col-md-3 control-label" name="label10" caption="And form Category"></wm-label>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn23"></wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="7" name="gridcolumn14">
+                                            <wm-select name="selectCategories" dataset="bind:Variables.MunicipalityCategories.dataSet" datafield="All Fields" displayfield="category" datavalue="bind:Variables.MunicipalityCategories.firstRecord"></wm-select>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="1" name="gridcolumn23"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow10" padding=".5em unset">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="8" name="gridcolumn16">
-                                            <wm-composite name="composite7">
-                                                <wm-label class="col-md-3 control-label" name="label11" caption="And"></wm-label>
-                                                <wm-container class="col-md-9" name="container7">
-                                                    <wm-select name="select3"></wm-select>
-                                                </wm-container>
-                                            </wm-composite>
+                                        <wm-gridcolumn columnwidth="2" name="gridcolumn31">
+                                            <wm-label class="col-md-3 control-label" caption="And Form Type" name="label9_1"></wm-label>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn columnwidth="2" name="gridcolumn24"></wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="7" name="gridcolumn16">
+                                            <wm-select name="selectFormType" dataset="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet" datafield="All Fields" displayfield="FormType" datavalue="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.firstRecord"></wm-select>
+                                        </wm-gridcolumn>
+                                        <wm-gridcolumn columnwidth="1" name="gridcolumn24"></wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow11" padding=".5em unset">
                                         <wm-gridcolumn columnwidth="2" name="gridcolumn17"></wm-gridcolumn>
